Added bootstrap and converted angular js code into coffeescript.